# stock-tool

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  mcp_test.py  mkdocs.yml  portfolio.db  pyproject.toml  test_portfolio.db
docs/: index.md  modules.md
stock_tool/: app.py  app_server.py  mcp_server.py  stock_tool.py
stock_tool/models/: models.py
stock_tool/repositories/: portfolio_repository.py  repository_factory.py  sqlite_portfolio_repository.py
stock_tool/routers/: index_listing_router.py  portfolio_router.py  stock_extraction_router.py
stock_tool/services/: index_listing_service.py  portfolio_service.py  stock_extraction_service.py
tests/: conftest.py  test_docker.py  test_index_listing_router_integration.py  test_mcp_server_integration.py  test_portfolio_router_integration.py  test_stock_extraction_router_integration.py
